Add virtual threads support with semaphore-based backpressure